# crypto-candlesticks

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  noxfile.py  pyproject.toml  requirements.txt  setup.cfg
.dependabot/: config.yml
.github/: CONTRIBUTING.md  dependabot.yml  pull_request_template.md  release-drafter.yml  release_pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
.github/workflows/: codecov.yml  python.yaml  python.yml  release-drafter.yml  release.yml  tests.yml
docs/: conf.py  crypto_candlesticks.bitfinex.rst  crypto_candlesticks.bitfinex_connector.rst  crypto_candlesticks.database.rst  crypto_candlesticks.eparate  crypto_candlesticks.exchanges.bitfinex.rst  crypto_candlesticks.exchanges.rst  crypto_candlesticks.get_data.rst  crypto_candlesticks.main.rst  crypto_candlesticks.rst  crypto_candlesticks.symbols.quote_currencies.rst  crypto_candlesticks.symbols.rst  crypto_candlesticks.symbols.time_intervals.rst  crypto_candlesticks.text_console.rst  examples.rst  index.rst  license.rst  modules.rst  requirements.txt  upd.md  upd_00001.md  upd_00002.md  upd_00003.md  upd_00004.md  upd_00005.md  upd_00006.md  upd_00007.md  upd_00008.md  upd_00009.md  upd_00010.md  upd_00011.md  upd_00012.md  upd_00013.md  upd_00014.md  upd_00015.md  upd_00016.md  upd_00017.md  upd_00018.md  upd_00019.md  upd_00020.md  (+50 more)
examples/: BTCUSD-1m.p  BTCUSD-1m.sqlite3  BTCUSD-1m1593962457.638062.csv
src/crypto_candlesticks/: __init__.py  database.py  get_data.py  interface.py  main.py  text_console.py  validate_symbol.py
src/crypto_candlesticks/bitfinex/: __init__.py  connector.py
src/crypto_candlesticks/bitfinex_connector/: __init__.py  connector.py
src/crypto_candlesticks/exchanges/: __init__.py  bitfinex.py
src/crypto_candlesticks/symbols/: __init__.py  intervals.py  quote_currencies.py  quote_currency.py  time_intervals.py
src/crypto_candlesticks/🎁/: 🐰.txt
tests/: __init__.py  conftest.py  test_interface.py  test_symbols.py
