[tool.poetry]
authors = ["Pedro Torres <corfucinas@protonmail.com>"]
description = "Download candlestick data fast & easy for analysis"
homepage = "https://crypto-candlesticks.readthedocs.io/en/latest/"
keywords = ["cryptocurrency", "candlesticks", "download", "data", "ohlc"]
license = "GNU GPLv3"
name = "crypto-candlesticks"
readme = "README.md"
repository = "https://github.com/Corfucinas/crypto-candlesticks"
version = "0.2.0"

[tool.poetry.dependencies]
click = ">=7.1.2,<9.0.0"
importlib-metadata = ">=3.3,<5.0"
pandas = "^1.0.5"
python = "^3.7"
requests = "^2.24.0"
retry = "^0.9.2"
rich = ">=9.6.2,<12.0.0"

[tool.poetry.dev-dependencies]
Sphinx = "^4.4.0"
black = "^21.12b0"
codecov = "^2.1.11"
darglint = "^1.8.1"
furo = "^2022.1.2"
mypy = "^0.931"
nox = "^2022.1.7"
pre-commit = "^2.17.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"
safety = "^1.10.3"
sphinx-autodoc-typehints = "^1.15.2"
wemake-python-styleguide = "^0.16.0"
xdoctest = "^0.15.10"

[tool.black]
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.nox
    | \.venv
    | _build
    | .pytest_cache
    | .vscode
    | build
    | dist
  )/
)
'''
line-length = 79
skip-string-normalization = true

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["crypto_candlesticks"]

[tool.coverage.report]
show_missing = true

[tool.poetry.scripts]
crypto-candlesticks = "crypto_candlesticks.interface:main"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
