[tool.poetry]
authors = ["Pedro Torres <corfucinas@protonmail.com>"]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Education",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Utilities",
  "Topic :: Terminals",
  "Topic :: System :: Software Distribution",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "Download candlestick data fast & easy for analysis"
homepage = "https://crypto-candlesticks.readthedocs.io/en/latest/"
keywords = ["cryptocurrency", "candlesticks", "download", "data", "ohlc"]
license = "GPL-3.0-or-later"
name = "crypto-candlesticks"
readme = "README.md"
repository = "https://github.com/Corfucinas/crypto-candlesticks"
version = "0.2.1"

[tool.poetry.urls]
"issues" = "https://github.com/Corfucinas/crypto-candlesticks/issues/new/choose"

[tool.poetry.scripts]
crypto-candlesticks = "crypto_candlesticks.main:main"

[tool.poetry.dependencies]
click = "^8.0.3"
pandas = "^1.0.5"
python = "^3.8"
requests = "^2.24.0"
retry = "^0.9.2"
rich = "^11.0.0"

[tool.poetry.dev-dependencies]
Sphinx = "^4.4.0"
black = "^22.1"
codecov = "^2.1.11"
commitizen = "^2.20.4"
flakeheaven = "^0.11.1"
furo = "^2022.1.2"
mypy = "^0.931"
nox = "^2022.1.7"
perflint = "^0.7.1"
pre-commit = "^2.16.0"
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"
safety = "^1.10.3"
sphinx-copybutton = "^0.5.0"
sphinxcontrib-spelling = "^7.3.2"
sphinxext-opengraph = "^0.5.1"
wemake-python-styleguide = "^0.16.0"

[tool.flakeheaven]
format = "grouped"
max_line_length = 79
show_source = true

[tool.flakeheaven.plugins]
"*" = ["+*", "-WPS226", "-WPS202", "-WPS305", "-WPS412", "-WPS421", "-WPS433"]

[tool.black]
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.nox
    | \.venv
    | _build
    | .pytest_cache
    | .vscode
    | build
    | dist
  )/
)
'''
line-length = 79
skip-string-normalization = true

[tool.mypy]
allow_redefinition = false
check_untyped_defs = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_errors = false
implicit_reexport = false
local_partial_types = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["requests.*", "retry.*", "pandas.*", "toml.*"]

[tool.isort]
combine_star = true
force_grid_wrap = 0
import_heading_firstparty = "project"
import_heading_localfolder = "app"
import_heading_stdlib = "built-in"
import_heading_thirdparty = "external"
include_trailing_comma = true
line_length = 79
lines_after_imports = 2
profile = "black"

[tool.coverage.paths]
source = ["./src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["crypto_candlesticks"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
]
show_missing = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version = "0.2.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
